--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">WoW ToDo</string>
+    <string name="label_criar_tarefa">Criar Tarefa</string>
+    <string name="label_tarefas">Tarefas</string>
+    <string name="label_title">Titulo</string>
+    <string name="label_description">Descrição</string>
+    <string name="label_hora">Hora</string>
+    <string name="label_cancelar">Cancelar</string>
 </resources>
