Adicionado o popupMenu e os listener para os itens do mesmo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="label_description">Descrição</string>
     <string name="label_hora">Hora</string>
     <string name="label_cancelar">Cancelar</string>
+    <string name="label_edit">Editar</string>
+    <string name="label_delete">Deletar</string>
 </resources>
